@@ -50,8 +50,8 @@ public:
     virtual void setSinkName(const QString &sinkName) = 0;
 
 protected:
-    Player(QObject* parent = 0, const char* name = 0, const QStringList& args=QStringList()) :
-        QObject(parent, name) {}
+    Player(QObject* parent = 0, const char* name = 0, const QStringList& args=QStringList() ) :
+        QObject(parent, name) { if (args.isEmpty()); } // TODO: Avoid compiler WARNING.  Better way?
 
 };
 
