@@ -52,8 +52,8 @@ void GStreamerPlayer::startPlay(const QString &file)
 {
     if(!file.isNull()) {
         stop();
-        // g_object_set(G_OBJECT(m_source), "location", file.absFilePath().utf8().data(), 0);
-        g_object_set(G_OBJECT(m_source), "location", file.data(), 0);
+        // g_object_set(G_OBJECT(m_source), "location", file.absFilePath().local8Bit().data(), 0);
+        g_object_set(G_OBJECT(m_source), "location", file.local8Bit().data(), 0);
     }
 
     gst_element_set_state(m_pipeline, GST_STATE_PLAYING);
@@ -118,7 +118,7 @@ void GStreamerPlayer::seekPosition(int position)
 {
     long long total = time(GST_QUERY_TOTAL);
     if(total > 0)
-        seek(double(position) / double(1000) * double(totalTime()) + 0.5);
+        seek(int(double(position) / double(1000) * double(totalTime()) + 0.5));
 }
 
 /**
